<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KanaQuiz</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_library">LibraryActivity</string>
    <string name="Library">Library</string>
    <string name="testYes">Yes</string>
    <string name="testNo">No</string>
    <string name="infinityLoop">Infinity Loop</string>
    <string name="randomizeTest">RandomizeTest</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="timeLabelTextView">Time: </string>
    <string name="flipCard">Flip Card</string>
    <string name="testFinished">End Of Quiz</string>
    <string name="kannaDoIt">You Kanna Do It!</string>
    <string name="continueButton" >Continue</string>

    <string-array name="hiragana">
        <item>あ</item>
        <item>い</item>
        <item>う</item>
        <item>え</item>
        <item>お</item>
        <item>か</item>
        <item>き</item>
        <item>く</item>
        <item>け</item>
        <item>こ</item>
        <item>が</item>
        <item>ぎ</item>
        <item>ぐ</item>
        <item>げ</item>
        <item>ご</item>
        <item>さ</item>
        <item>し</item>
        <item>す</item>
        <item>せ</item>
        <item>そ</item>
        <item>ざ</item>
        <item>じ</item>
        <item>ず</item>
        <item>ぜ</item>
        <item>ぞ</item>
        <item>た</item>
        <item>ち</item>
        <item>つ</item>
        <item>て</item>
        <item>と</item>
        <item>だ</item>
        <item>ぢ</item>
        <item>づ</item>
        <item>で</item>
        <item>ど</item>
        <item>な</item>
        <item>に</item>
        <item>ぬ</item>
        <item>ね</item>
        <item>の</item>
        <item>は</item>
        <item>ひ</item>
        <item>ふ</item>
        <item>へ</item>
        <item>ほ</item>
        <item>ば</item>
        <item>び</item>
        <item>ぶ</item>
        <item>べ</item>
        <item>ぼ</item>
        <item>ぱ</item>
        <item>ぴ</item>
        <item>ぷ</item>
        <item>ぺ</item>
        <item>ぽ</item>
        <item>ま</item>
        <item>み</item>
        <item>む</item>
        <item>め</item>
        <item>も</item>
        <item>や</item>
        <item/>
        <item>ゆ</item>
        <item/>
        <item>よ</item>
        <item>ら</item>
        <item>り</item>
        <item>る</item>
        <item>れ</item>
        <item>ろ</item>
        <item>わ</item>
        <item/>
        <item/>
        <item/>
        <item>を</item>
        <item>ん</item>
    </string-array>

    <string-array name="romanized_kana" >
        <item>a</item>
        <item>i</item>
        <item>u</item>
        <item>e</item>
        <item>o</item>
        <item>ka</item>
        <item>ki</item>
        <item>ku</item>
        <item>ke</item>
        <item>ko</item>
        <item>ga</item>
        <item>gi</item>
        <item>gu</item>
        <item>ge</item>
        <item>go</item>
        <item>sa</item>
        <item>shi</item>
        <item>su</item>
        <item>se</item>
        <item>so</item>
        <item>za</item>
        <item>ji</item>
        <item>zu</item>
        <item>ze</item>
        <item>zo</item>
        <item>ta</item>
        <item>chi</item>
        <item>tsu</item>
        <item>te</item>
        <item>to</item>
        <item>da</item>
        <item>di</item>
        <item>du</item>
        <item>de</item>
        <item>do</item>
        <item>na</item>
        <item>ni</item>
        <item>nu</item>
        <item>ne</item>
        <item>no</item>
        <item>ha</item>
        <item>hi</item>
        <item>fu</item>
        <item>he</item>
        <item>ho</item>
        <item>ba</item>
        <item>bi</item>
        <item>bu</item>
        <item>be</item>
        <item>bo</item>
        <item>pa</item>
        <item>pi</item>
        <item>pu</item>
        <item>pe</item>
        <item>po</item>
        <item>ma</item>
        <item>mi</item>
        <item>mu</item>
        <item>me</item>
        <item>mo</item>
        <item>ya</item>
        <item/>
        <item>yu</item>
        <item/>
        <item>yo</item>
        <item>ra</item>
        <item>ri</item>
        <item>ru</item>
        <item>re</item>
        <item>ro</item>
        <item>wa</item>
        <item/>
        <item/>
        <item/>
        <item>wo</item>
        <item>n</item>

    </string-array>

    <string name="title_activity_test_finsih">TestFinsihActivity</string>
    <string name="title_activity_settings">Settings</string>

</resources>
