<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hiriganaapp.monster.hiriganaapp.View.SettingsActivity"
    android:background="@drawable/main_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings"
        android:textSize="60dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="#cdcdcd">

        <CheckBox
            android:id="@+id/infiniteLoopSetting_CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:checked="false"
            android:text="@string/infinityLoop" />

        <CheckBox
            android:id="@+id/randomizeTestSettings_CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/randomizeTest" />

    </LinearLayout>


</RelativeLayout>
