<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.hiriganaapp.monster.hiriganaapp.View.TestActivity"
    android:background="@drawable/main_bg"
    >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#cdcdcd"
        android:layout_centerInParent="true"
        android:padding="10dp"
        >


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hiraganaDisplay_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_weight="0.20"
            android:textSize="120dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentCardNumber_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="14dp"

                android:text="/" />

            <TextView
                android:id="@+id/totalCardNumber_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yes_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testYes" />

            <Button
                android:id="@+id/no_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/testNo" />


        </LinearLayout>
    </LinearLayout>


    </FrameLayout>


    <TextView
        android:id="@+id/timer_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/timeLabelTextView"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@+id/timeLabelTextView"
        android:layout_toRightOf="@+id/timeLabelTextView" />

    <TextView
        android:id="@+id/timeLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeLabelTextView" />
</RelativeLayout>
